# rfgames-backend

./: .nowignore  Cargo.toml  Dockerfile  README.md  deploy.sh  now.json
.github/: dependabot.yaml
.github/workflows/: build-apply.yml  build-contact.yml  docker-apply.yaml  docker-contact.yaml  docker.yaml  main.yaml
api/: Cargo.toml  apply.rs  build.sh  contact.rs  lib.rs
lib/: Cargo.toml  lib.rs  process.rs
src/: id.rs  lib.rs  serve.rs  server.rs
