[package]
name = "rfgames-api-backend"
version = "1.4.3"
authors = ["Yang Sheng Han <progamesigner@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
actix-rt = "2.9"
actix-web = { version = "4.4", features = ["rustls"] }
awc = "3.4.0"
chrono = "0.4"
env_logger = "0.11"
futures = "0.3"
http = "1.0"
lazy_static = "1.4"
rand = "0.8"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
