[package]
name = "rfgames-api-backend"
version = "1.4.3"
authors = ["Yang Sheng Han <progamesigner@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
actix-rt = "2.11"
actix-web = { version = "4.12", features = ["rustls"] }
awc = "3.8.1"
chrono = "0.4"
env_logger = "0.11"
futures = "0.3"
http = "1.3"
lazy_static = "1.5"
rand = "0.9"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
