[package]
name = "api"
version = "1.0.0"
authors = ["Yang Sheng Han <progamesigner@gmail.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
lazy_static = "1.4"
lib = { path = "../lib" }
now_lambda = "0.1"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
